--- a/style.css
+++ b/style.css
@@ -368,3 +368,66 @@ p{
     border-radius:12px;
     margin-bottom:15px;
 }
+
+/* =========================
+   PROFIL SECTION
+========================= */
+
+.profil-wrapper{
+    width:100%;
+    max-width:1100px;
+
+    display:grid;
+    grid-template-columns:1.2fr 1fr;
+    gap:50px;
+    align-items:center;
+}
+
+/* TEXT CARD */
+
+.profil-text p{
+    margin-top:15px;
+}
+
+
+/* IMAGE STYLE */
+
+.profil-image{
+    position:relative;
+}
+
+.profil-image img{
+    width:100%;
+    border-radius:18px;
+    transition:0.4s;
+}
+
+/* glow background */
+
+.profil-image::before{
+    content:"";
+    position:absolute;
+    inset:-10px;
+    background:linear-gradient(120deg,#00ff87,#60efff);
+    filter:blur(60px);
+    opacity:0.25;
+    z-index:-1;
+}
+
+.profil-image:hover img{
+    transform:scale(1.03);
+}
+
+
+/* =========================
+   RESPONSIVE
+========================= */
+
+@media(max-width:900px){
+
+    .profil-wrapper{
+        grid-template-columns:1fr;
+        text-align:center;
+    }
+
+}
